--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
+        "munafio/chatify": "^1.5",
         "stripe/stripe-php": "^10.2"
     },
     "require-dev": {
